--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 * {
-    font-family: 'Roboto' sans-serif;
+    font-family: "Roboto", sans-serif;
 }
-header{
+
+header {
     position: relative;
-    height: 50px;
 }
+
 nav {
-    position: fixed; 
+    position: fixed;
     width: 100%;
     height: 50px;
     background-color: #212121;
@@ -21,14 +22,16 @@ nav {
 }
 
 .menu .menu_link {
-    font-size: 15px;
     font-weight: 300;
-    color: #ffffff;
+    font-size: 15px;
+    text-decoration: none;
+    color: #FFFFFF;
+
 }
 
 .menu .menu_item {
-    border-right: 2px dotted black;
-    padding-right: 30px;
+    border-right: 2px dotted #000000;
+    padding-right: 28px;
 }
 
 .subheader {
@@ -47,158 +50,150 @@ nav {
 
 .subheader .subheader_official {
     margin-top: 6px;
-    opacity: 0.5;
+    font-weight: 400;
     font-size: 13px;
-    font-weight: 300;
-    color: #ffffff;
+    color: #FFFFFF;
+    opacity: 0.5;
 }
 
 .subheader .subheader_call {
     margin-top: 19px;
-    font-size: 12px;
-    font-weight: 300;
-    color: #ffffff;
     text-align: right;
+    font-weight: 200;
+    font-size: 12px;
+    color: #FFFFFF;
 }
 
 .subheader .subheader_phone {
     display: block;
     margin-top: 8px;
-    font-size: 22px;
-    font-weight: 400;
-    color: #ffffff;
-    text-transform: uppercase;
-    text-align: right;
     line-height: 12px;
-}
-
-.subheader .subheader_btn {
-    margin-top: 19px;
-    height: 46px;
-    width: 172px;
-    box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
-    border: none;
-    border-radius: 4px;
-    background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
-    font-size: 14px;
     font-weight: 400;
-    color: #ffffff;
+    font-size: 22px;
     text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: right;
+    text-decoration: none;
 }
 
-.promo {
-    min-height: 800px;
-    background: url('../img/1.jpg') center center/cover no-repeat;
-    padding: 150px 0 135px 0;
-}
-
-.promo .promo_header {
-    line-height: 60px;
-    font-size: 60px;
-    font-weight: 700;
-    color: #ffffff;
+.subheader .subheader_btn, .promo .promo_btn{
+    margin-top: 19px;
+    width: 172px;
+    height: 46px;
+    background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%);
+    box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 14px;
     text-transform: uppercase;
-    text-align: center;
-    margin: 0;
-}
-
-.promo .promo_subheader {
-    font-size: 36px;
-    font-weight: 700;
-    color: #ffffff;
-    text-transform: uppercase;
-    line-height: 36px;
-    text-align: center;
-    margin: 0;
-    margin-top: 22px;
-}
-
-.promo .promo_descr {
-    font-size: 18px;
-    font-weight: 300;
-    color: #ffffff;
-    line-height: 24px;
-    text-align: center;
-    margin-top: 23px;
+    color: #FFFFFF;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
+    border: none;
 }
 
 .promo .promo_btn {
     display: block;
     margin: 118px auto 0 auto;
-    height: 63px;
     width: 259px;
-    box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12);
-    border: none;
-    border-radius: 4px;
-    background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
+    height: 63px;
     font-size: 18px;
-    font-weight: 400;
-    color: #ffffff;
+}
+
+.promo {
+    min-height: 800px;
+    background: url("../img/bg/1_bg.jpg") center center/cover no-repeat;
+    padding: 150px 0 135px 0;
+}
+
+.promo .promo_header {
+    font-weight: 900;
+    font-size: 60px;
     text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+    line-height: 60px;
+    margin: 0;
 }
 
-.reason {
-    padding: 71px 0 65px 0;
+.promo .promo_subheader {
+    font-weight: 700;
+    font-size: 36px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+    line-height: 36px;
+    margin: 0;
+    margin-top: 22px;
 }
 
-.label {
-    display: block;
-    margin: 0 auto;
-    width: 112px;
-    height: 24px;
-    padding: 5px 12px;
-    background-color: #000000;
+.promo .promo_descr {
+    margin-top: 23px;
     font-weight: 300;
-    font-size: 11px;
-    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 24px;
     color: #FFFFFF;
     text-align: center;
 }
 
-.title {
-    margin-bottom: 0;
+.advantag{
+    min-height: 900px;
+    padding: 71px 0 65px 0;
+}
+
+.label {
+    margin: 0 auto;
+    width: 113px;
+    height: 24px;
+    background: #000000;
+    display: flex;
+    font-weight: 400;
+    font-size: 11px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    align-items: center;
+    justify-content: center;
+}
+
+.advantag .advantag_subheader {
     margin-top: 38px;
+    margin-bottom: 0;
     font-weight: 700;
-    line-height: 48px;
-    text-align: center;
+    font-size: 38px;
     text-transform: uppercase;
     color: #222222;
-    font-size: 38px;
+    text-align: center;
 }
 
-.reason .reason_block {
+.advantag .advantag_item {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     margin-top: 35px;
+    padding: 0;
 }
 
-.reason .reason_block .reason_round {
+.advantag .advantag_circle {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-right: 26px;
-    width: 113px;
-    height: 113px;
+    width: 116px;
+    height: 116px;
     background: #1EACC7;
     border-radius: 100%;
 }
 
-.reason .reason_block .reason_descr {
+.advantag .advantag_text {
     width: 343px;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 21px;
+    color: #202020;
 }
 
-.reason .reason_block .reason_descr .reason_subtitle {
-    line-height: 21px;
-    color: #1eacc7;
+.advantag .advantag_text span {
     font-size: 17px;
     font-weight: 400;
+    color: #1EACC7;
 }
 
-.reason .reason_block .reason_descr .reason_text {
-    color: #202020;
-    font-size: 15px;
-    font-weight: 300;
-    line-height: 21px;
-    text-align: justify;
-}
